2001-09-27  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/ThreadLocal/simple.java: New file.

	* gnu/testlet/javax/naming/CompositeName/composite.java: New file.
	* gnu/testlet/javax/naming/CompoundName/simple.java: New file.

	* gnu/testlet/java/lang/ref/PhantomReference/phantom.java: New file.
	* gnu/testlet/java/lang/ref/WeakReference/weakref.java: New file.

2001-09-27  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/io/BufferedByteOutputStream/interrupt.java:
	Added `uses' line.

2001-09-04  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/String/CASE_INSENSITIVE_ORDER.java (test):
	There is no single-argument Locale constructor in JDK 1.2.

2001-09-03  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/String/CASE_INSENSITIVE_ORDER.java: Added
	new test class.

2001-08-23  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/lang/reflect/Method/toString.java (test): Added
	test for method with array argument.

2001-08-19  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/lang/Math/min.java: added some more tests for min that don't
	use string comparisons

2001-08-11  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/text/ChoiceFormat/format.java (test): changed format to doformat 
	(doformat): changed name from format (conflicted with class name)

2001-08-09  Eric Blake  <ebb9@email.byu.edu>

	* gnu/testlet/java/lang/StringBuffer/plus.java (test): fix test to
	match JDK1.4
	* gnu/testlet/java/lang/reflect/Method/invoke.java (test): fix
	test to match JDK1.4
	* gnu/testlet/java/lang/reflect/Constructor/newInstance.java
	(test): fix test to match JDK1.4
	* gnu/testlet/java/lang/reflect/Array/newInstance.java (test):
	added more tests

2001-08-09  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/lang/Math/min.java: added checkpoints
	* gnu/testlet/java/lang/System/arraycopy.java: Added checkPoint()s for various cases